production/2-grafana/4-mimir/ingress-distributor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mr-mimir-ingress-distributor
  namespace: grafana
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: mimir.local
      http:
        paths:
          - path: / # GRPC endpoint (gRPC harus tetap root jika pakai otel)
            pathType: Prefix
            backend:
              service:
                name: mr-mimir-distributor
                port:
                  number: 8080
